--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies" : {
       "html5shiv": "3.7.3",
-      "bootstrap": "3.3.7",  
+      "bootstrap": ">=3.4.0",  
       "bootstrap-social": "5.1.1"
     }
     
